# -object-detection-

./: LICENSE  README.md  detecting.cpp  human_follower.cpp  human_following.cpp  last_following.py  package.xml  setup.cfg  setup.py  start_royce.sh  voice_robot_control.py  연구노트 노르보예브쇼흐자혼, 전지웅.docx
